src/app/home/home.page.scss
#container {
	text-align: center;

	position: absolute;
	left: 0;
	right: 0;
	top: 50%;
	transform: translateY(-50%);
}

#container strong {
	font-size: 20px;
	line-height: 26px;
}

#container p {
	font-size: 16px;
	line-height: 22px;

	color: #8c8c8c;

	margin: 0;
}

#container a {
	text-decoration: none;
}

.session {
	font-weight: 300;
	margin-left: 30px;
}

.camera-selector {
	color: white;
	position: absolute;
	right: 40px;
	bottom: 20px;
	background-color: rgba(0, 0, 0, 0.5);
	padding: 4px 20px;
	font-size: 18px;
}

.recording-time {
    font-size: 12px;
    line-height: 32px;
	color: var(--ion-color-primary);
}

:host ::ng-deep ion-select {
	--highlight-color: var(--ion-color-primary);
}

#present-session-alert {
	color: white;
	position: absolute;
	left: 40px;
	bottom: 20px;
	background-color: rgba(0, 0, 0, 0.5);
	padding: 18px 4px;
	font-size: 18px;
	min-height: 60px;
	text-transform: initial;
}

ion-toolbar ion-button:hover {
	opacity: 0.8;
}

.touch-button {
	border: 1px solid white;
	background-color: rgba(0, 0, 0, 0.5);
	color: white;
}

.touch-button:hover {
	cursor: pointer;
	border: 1px solid rgba(255, 255, 255, 0.5);
	
	ion-icon {
		opacity: 0.6;
	}
}


#touch-take-photo,
#touch-start-recording,
#touch-stop-recording {
	position: absolute;
	right: 40px;
	padding: 18px 4px;
	min-height: 60px;
	text-transform: initial;
	width: 75px;
	height: 75px;
	ion-icon {
		font-size: 36px;
	}
}

#touch-start-recording {
	color: red;
	ion-icon {
		font-size: 24px;
	}
}

#touch-take-photo {
	top: 35%;
}

#touch-start-recording,
#touch-stop-recording {
	bottom: 35%;
}

ion-toolbar ion-button:hover {
	opacity: 0.6;
}

